--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.3",
+    "electron": "^33.2.1",
+    "express": "^4.21.1",
+    "firebase-admin": "^13.0.1",
+    "puppeteer": "^23.10.1",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.26.0"
   }
