--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "child_process": "^1.0.2",
+    "clipboardy": "^2.3.0",
     "electron": "^33.2.1",
     "express": "^4.21.1",
     "firebase-admin": "^13.0.1",
+    "fluent-ffmpeg": "^2.1.3",
+    "fs": "^0.0.1-security",
+    "node-youtube-dl": "^0.0.2",
+    "path": "^0.12.7",
     "puppeteer": "^23.10.1",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.26.0"
+    "whatsapp-web.js": "^1.26.0",
+    "ytdl-core": "^4.11.5"
   }
 }
