--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.9",
     "body-parser": "^1.20.3",
     "child_process": "^1.0.2",
     "clipboardy": "^2.3.0",
@@ -22,6 +23,7 @@
     "path": "^0.12.7",
     "puppeteer": "^23.10.1",
     "qrcode-terminal": "^0.12.0",
+    "robotjs": "^0.6.0",
     "whatsapp-web.js": "^1.26.0",
     "ytdl-core": "^4.11.5"
   }
