--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
+    "cheerio": "^1.0.0",
     "child_process": "^1.0.2",
     "clipboardy": "^2.3.0",
+    "cors": "^2.8.5",
     "electron": "^33.2.1",
     "express": "^4.21.1",
     "firebase-admin": "^13.0.1",
@@ -22,6 +24,7 @@
     "node-youtube-dl": "^0.0.2",
     "path": "^0.12.7",
     "puppeteer": "^23.10.1",
+    "puppeteer-core": "^23.10.1",
     "qrcode-terminal": "^0.12.0",
     "robotjs": "^0.6.0",
     "whatsapp-web.js": "^1.26.0",
